<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cenario"
    android:orientation="vertical"
    tools:context=".Veiculos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:contentDescription="@string/scroll">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/car"/>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="699dp"
            android:layout_margin="15dp"
            android:backgroundTint="#F3F3F3"
            android:fontFamily="@font/alata"
            android:text="@string/NonoParagrafo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="312dp"
            android:layout_margin="15dp"
            android:backgroundTint="#F3F3F3"
            android:fontFamily="@font/alata"
            android:text="@string/DecimoParagrafo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="1159dp"
            android:layout_margin="15dp"
            android:backgroundTint="#F3F3F3"
            android:fontFamily="@font/alata"
            android:text="@string/OnzeParagrafo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>