<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cenario"
    android:orientation="vertical"
    tools:context=".mapa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:contentDescription="@string/scroll">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_margin="15dp"
            app:srcCompat="@drawable/map"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="#F3F3F3"
            android:fontFamily="@font/alata"
            android:text="@string/QuatorzeParagrafo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="400dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/trevor_palavras" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="#F3F3F3"
            android:fontFamily="@font/alata"
            android:text="@string/QuinzeParagrafo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="400dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/fantasma" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="#F3F3F3"
            android:fontFamily="@font/alata"
            android:text="@string/DezesseisParagrafo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="400dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/alien" />
    </LinearLayout>
</ScrollView>

