<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cenario"
    android:orientation="vertical"
    tools:context=".Codigos">

        <androidx.core.widget.NestedScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:contentDescription="@string/scroll">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    app:srcCompat="@drawable/codigos" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="386dp"
                    android:layout_height="186dp"
                    android:layout_margin="15dp"
                    android:backgroundTint="#F3F3F3"
                    android:fontFamily="@font/alata"
                    android:text="@string/SetimoParagrafo"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#FFFF"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="248dp"
                    android:layout_margin="15dp"
                    android:backgroundTint="#F3F3F3"
                    android:fontFamily="@font/alata"
                    android:text="@string/DozeParagrafo"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#FFFF"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="283dp"
                    android:layout_margin="15dp"
                    android:backgroundTint="#F3F3F3"
                    android:fontFamily="@font/alata"
                    android:text="@string/TrezeParagrafo"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#FFFF"
                    android:textSize="15dp"
                    android:textStyle="bold" />
        </LinearLayout>
        </androidx.core.widget.NestedScrollView>
</ScrollView>



            

